--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css"> 
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -25,6 +25,9 @@
     <![endif]-->
   </head>
   <body>
+    <div class="overlay container">
+        <h1>Please view on a desktop computer.</h1>
+    </div>
       <div class="row">
        <div class="column1 col-md-5">
           <div id="header">
@@ -67,7 +70,7 @@
            </div>
            <div id="number6">
            </div>
-       </div> 
+       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
