--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div class="overlay container">
-        <h1>Please view on a desktop computer.</h1>
+        <h1 style="padding-top: 50px;">Please view on a desktop computer.</h1>
     </div>
       <div class="row">
        <div class="column1 col-md-5">
@@ -51,7 +51,7 @@
            <div id="number3">
                <h1 style="padding-left:15px;
                padding-top:15px;
-               color: white;">03. <span style="font-size: 30px">I want to know more.</span></h1>
+               color: white;">05. <span style="font-size: 30px">I want to know more.</span></h1>
                <p style="font-weight: 200; font-size: 19px; color: white; padding-left: 20px; padding-top:14px; padding-right: 20px;">I've learned to study the marketing and design industry through interest alone, but QMAC will give me a microscope and a better idea of how to apply my skillset.</p>
            </div>
        </div>
@@ -59,13 +59,13 @@
           <div id="number4">
           <h1 style="padding-left: 15px;
           padding-top:15px;
-          color: lightseagreen;">04. <span style="font-size: 30px">I code things.</span></h1>
+          color: lightseagreen;">03. <span style="font-size: 30px">I code things.</span></h1>
               <p style="font-weight: 200; font-size: 16px; color: gray; padding-left: 20px; padding-top:14px; margin-right: 20px;">This page you're viewing was written with love, from scratch.<br> And so was this <a href="http://elainegao.com/blog">blog.</a><br>And this <a href="http://elainegao.com">design portfolio.</a><br>And- Well, you get the point.</p>
            </div>
            <div id="number5">
            <h1 style="padding-left: 15px;
            padding-top:15px;
-           color: white;">05. <span style="font-size: 30px">I ♥ orange.</span></h1>
+           color: white;">04. <span style="font-size: 30px">I ♥ orange.</span></h1>
            <p style="font-weight: 200; font-size: 19px; color: white; padding-left: 20px; padding-top:10px; padding-right: 20px;">It's my favourite color, even though I make it pretty hard to tell. Branding is all about letting people what's important to you, so they'll know immediately if you'll align. Call me maybe, QMAC.</p>
            </div>
            <div id="number6">
