--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            </div>
            <div id="number2">
                <h1 style="padding-left: 30px; padding-top:17px; color: lightseagreen;">02. <span style="font-size: 30px">I am a material girl.</span></h1>
-               <p style="font-weight: 200; color: gray; font-size: 16px; padding-left: 35px; padding-top:14px; padding-right:20px;">I look beyond the surface because brands are more than just a pretty face: Each one reveals the values of a company through the many languages of aesthetics. A brand I admire is <a href="https://www.thebay.com/webapp/wcs/stores/servlet/en/thebay">HBC</a>, which has managed the feat of redefining characteristically "Canadian" style for countless major in-house releases: From the recurring Olympic Team Collection to the ever iconic HBC stripes. The Bay may not be in right now, but branding isn't just about what's hip. It's about which company helps consumers best express their identity, and the HBC has Canadians covered. <span style="color: lightseagreen;">That is our material world.</span> </p>
+               <p style="font-weight: 200; color: gray; font-size: 15px; padding-left: 35px; padding-top:14px; padding-right:20px;">I look beyond the surface because brands are more than just a pretty face: Each one reveals the values of a company through the many languages of aesthetics. A brand I admire is <a href="https://www.thebay.com/webapp/wcs/stores/servlet/en/thebay">HBC</a>, which has managed the feat of redefining characteristically Canadian style for countless major in-house releases: From the recurring Olympic Team Collection to the ever iconic HBC stripes. The Bay may not be in right now, but branding isn't just about what's hip. It's about which company helps consumers best express their identity, and the HBC has Canadians covered. <span style="color: lightseagreen;">That is our material world.</span> </p>
            </div>
        </div>
        <div class="column2 col-md-4">
@@ -52,7 +52,7 @@
                <h1 style="padding-left:15px;
                padding-top:15px;
                color: white;">05. <span style="font-size: 30px">I want to know more.</span></h1>
-               <p style="font-weight: 200; font-size: 19px; color: white; padding-left: 20px; padding-top:14px; padding-right: 20px;">I've learned to study the marketing and design industry through interest alone, but QMAC will give me a microscope and a better idea of how to apply my skillset.</p>
+               <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:14px; padding-right: 20px;">I've learned to study the marketing and design industry through interest alone, but QMAC will give me a microscope and a better idea of how to apply my skillset.</p>
            </div>
        </div>
        <div class="column3 col-md-3">
@@ -66,7 +66,7 @@
            <h1 style="padding-left: 15px;
            padding-top:15px;
            color: white;">04. <span style="font-size: 30px">I ♥ orange.</span></h1>
-           <p style="font-weight: 200; font-size: 19px; color: white; padding-left: 20px; padding-top:10px; padding-right: 20px;">It's my favourite color, even though I make it pretty hard to tell. Branding is all about letting people what's important to you, so they'll know immediately if you'll align. Call me maybe, QMAC.</p>
+           <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:10px; padding-right: 20px;">It's my favourite color, even though I make it pretty hard to tell. Branding is all about letting people what's important to you, so they'll know immediately if you'll align. Call me maybe, QMAC.</p>
            </div>
            <div id="number6">
            </div>
