--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
            <div id="number3">
                <h1 style="padding-left:15px;
                padding-top:15px;
-               color: white;">05. <span style="font-size: 30px">I want to know more.</span></h1>
-               <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:14px; padding-right: 20px;">I've learned to study the marketing and design industry through interest alone, but QMAC will give me a microscope and a better idea of how to apply my skillset.</p>
+               color: white;">05. <span style="font-size: 30px">I'm eager to learn.</span></h1>
+               <p style="font-weight: 200; font-size: 17px; color: white; padding-left: 20px; padding-top:14px; padding-right: 20px;">I've learned to study the marketing and design industry through interest alone, but QMAC will give me a microscope and a better idea of how to apply my skillset.</p>
            </div>
        </div>
        <div class="column3 col-md-3">
@@ -66,7 +66,7 @@
            <h1 style="padding-left: 15px;
            padding-top:15px;
            color: white;">04. <span style="font-size: 30px">I ♥ orange.</span></h1>
-           <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:14px; padding-right: 20px;">It's my favourite color, even though I make it pretty hard to tell. Branding is all about letting people what's important to you, so they'll know immediately if you'll align. Call me maybe, QMAC.</p>
+           <p style="font-weight: 200; font-size: 17px; color: white; padding-left: 20px; padding-top:14px; margin-right: 30px;">It's my favourite color, even though I make it pretty hard to tell. Branding is all about letting people what's important to you, so they'll know immediately if you'll align. Call me maybe, QMAC.</p>
            </div>
            <div id="number6">
            </div>
