I PROMISE I WILL NEVER TOUCH THIS AGAIN

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <div class="column1 col-md-5">
           <div id="header">
             <h1 style="padding-left: 32px; padding-top:17px; color: white;">Hi, I'm Elaine.</h1>
-            <p style="font-weight: 500; font-size: 24px; color: white; padding-left: 35px; padding-top:12px;">I'm going to QMAC because:</p>
+            <p style="font-weight: 500; font-size: 22px; color: white; padding-left: 30px;padding-top:12px; ">#5reasonswhy you'll send me to QMAC:</p>
            </div>
            <div id="number1">
                <h1 style="padding-left: 30px; padding-top:17px; color: white;">01. <span style="font-size: 30px;">Design is my religion.</span></h1>
@@ -60,13 +60,13 @@
           <h1 style="padding-left: 15px;
           padding-top:15px;
           color: lightseagreen;">03. <span style="font-size: 30px">I code things.</span></h1>
-              <p style="font-weight: 200; font-size: 16px; color: gray; padding-left: 20px; padding-top:14px; margin-right: 20px;">This page you're viewing was written with love, from scratch.<br> And so was this <a href="http://elainegao.com/blog">blog.</a><br>And this <a href="http://elainegao.com">design portfolio.</a><br>And- Well, you get the point.</p>
+              <p style="font-weight: 200; font-size: 16px; color: gray; padding-left: 20px; padding-top:14px; margin-right: 20px;">I make the web a prettier place, one line at a time.<br>Read my <a href="http://elainegao.com/blog">blog</a> to witness the birth of #5reasonswhy, or visit my <a href="http://elainegao.com">design portfolio.</a></p>
            </div>
            <div id="number5">
            <h1 style="padding-left: 15px;
            padding-top:15px;
            color: white;">04. <span style="font-size: 30px">I ♥ orange.</span></h1>
-           <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:14px; margin-right: 30px;">It's my favourite color, to nobody's surprise. That's because cheery and daring orange is core to my personal brand. Branding is all about letting people know what's important to you, so they know right away if you'll align. We were just meant to be, QMAC.</p>
+           <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:14px; margin-right: 30px;">It's my favourite color, and it's obvious. Cheery and daring orange is core to my personal brand. Branding is all about letting people know what's important to you, so they know right away if you'll align. We were just meant to be, QMAC.</p>
            </div>
            <div id="number6">
            </div>
