--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
           <h1 style="padding-left: 15px;
           padding-top:15px;
           color: lightseagreen;">03. <span style="font-size: 30px">I code things.</span></h1>
-              <p style="font-weight: 200; font-size: 16px; color: gray; padding-left: 20px; padding-top:14px; margin-right: 20px;">I make the web a prettier place, one line at a time.<br>Read my <a href="http://elainegao.com/blog">blog</a> to witness the birth of #5reasonswhy, or visit my <a href="http://elainegao.com">design portfolio.</a></p>
+              <p style="font-weight: 200; font-size: 16px; color: gray; padding-left: 20px; padding-top:14px; margin-right: 20px;">Such as this page. I make the web a prettier place, one line at a time. Read my <a href="http://www.elainegao.com/blog/my-QMAC-application">blog</a> to witness the birth of #5reasonswhy, or visit my <a href="http://elainegao.com">design portfolio.</a></p>
            </div>
            <div id="number5">
            <h1 style="padding-left: 15px;
            padding-top:15px;
            color: white;">04. <span style="font-size: 30px">I ♥ orange.</span></h1>
-           <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:14px; margin-right: 30px;">It's my favourite color, and it's obvious. Cheery and daring orange is core to my personal brand. Branding is all about letting people know what's important to you, so they know right away if you'll align. We were just meant to be, QMAC.</p>
+           <p style="font-weight: 200; font-size: 16px; color: white; padding-left: 20px; padding-top:14px; margin-right: 30px;">It's my favourite color, and I make it obvious. Cheery and daring, orange is core to my personal brand. Branding is all about letting people know what's important to you, so they know right away if you'll align. QMAC, it's clear we were just meant to be.</p>
            </div>
            <div id="number6">
            </div>
